# myUMPSA

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  README.md  Resources.qrc  ecommumpsa.cpp  ecommumpsa.h  main.cpp  myumpsa.cpp  myumpsa.h  myumpsa.ui  source.jnlp  staff.cpp  staff.h
images/: icon.icns  icon2.icns  myUMPSA.icns
